--- a/Views/ListaMedicamento.xaml
+++ b/Views/ListaMedicamento.xaml
@@ -2,11 +2,37 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MedicacaoDiariaApp.Views.ListaMedicamento"
-             Title="ListaMedicamento">
+             Title="Lista de Medicamentos">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Adicionar Medicamento" Clicked="ToolbarItem_Clicked" />
+    </ContentPage.ToolbarItems>
+    
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+        <SearchBar x:Name="txt_search"
+                   Placeholder="Busca de Medicamentos"
+                   TextChanged="txt_search_TextChanged"/>
+                <ListView x:Name="lst_medicamentos" ItemSelected="lst_medicamentos_ItemSelected">
+                    <ListView.Header>
+                        <Grid ColumnDefinitions="*, *">
+                            <Label Grid.Column="0" Text="Nome" />
+                            <Label Grid.Column="1" Text="Indicação" />
+
+                        </Grid>                
+                    </ListView.Header>
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <ViewCell.ContextActions>
+                                    <MenuItem Text="Remover" Clicked="MenuItem_Clicked"/>
+                                </ViewCell.ContextActions>
+                                <Grid ColumnDefinitions="*, *">
+                                    <Label Grid.Column="0" Text="{Binding Nome}" />
+                                    <Label Grid.Column="1" Text="{Binding Indicacao}" />
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                  </ListView>
+            </VerticalStackLayout>
 </ContentPage>
